platform/shared/data_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data
  labels:
    env: shared
    component: data
