platform/shared/registry_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-registry
  namespace: data
spec:
  selector:
    app: image-registry
  ports:
    - port: 5000
      targetPort: 5000
